# Object-oriented-programming-labs

./: README.md
lab1/: main.cpp
lab2/: main.cpp
lab3/: main.cpp
lab4/: CMakeLists.txt  main.cpp
